<resources>
    <string name="app_name">Kremenchug-city</string>
    <string name="action_settings">Settings</string>
    <string name="statistics">Statistic</string>
    <string name="how_it_work">How it works?</string>
    <string name="cool_down">KREMENCHUG</string>
    <string name="charge_up">OUR CITY!</string>
    <string name="Activ">Active</string>
    <string name="Done">Done</string>
    <string name="give">Report on </string>
    <string name="title_activity_2">Back</string>
    <string name="title_activity_2_1">How it works?</string>
    <string name="title_activity_2_2">1. You are sending a message</string>
    <string name="title_activity_2_3">2. Your message is moderated and falls into the category Active</string>
    <string name="title_activity_2_4">3.When the task is completed, your request is sent to the archive, where you can always track it</string>
    <string name="title_activity_3">Back</string>
    <string name="title_activity_statistic">Back</string>
    <string name="mail">Mail</string>
    <string name="people">200 satisfied residents have already tried the service</string>
    <string name="people1">70 registred users</string>
    <string name="people2">280 applications reviewed</string>
    <string name="Message_subject">Message subject</string>
    <string name="I_want_to_inform_you_that">I want to inform you that</string>
    <string name="Choose_photo">Choose photo</string>
    <string name="Show_on_map">Show on map</string>
    <string name="Send">Send</string>
    <string name="Save">Save</string>
    <string name="Refresh">Refresh</string>
    <string name="Coordinate">Coordinate:</string>
    <string name="title_activity_map">Back</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Confirm_password">Confirm password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_caption">Do not have an account? Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="logout">Logout</string>

    <string name="greeting">Hi, %s :)</string>

</resources>
