<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sash.kremenchug.Activity_statistic"
    tools:showIn="@layout/activity_statistic">

    <LinearLayout
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"

            android:text="@string/people" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"

            android:text="@string/people1" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"

            android:text="@string/people2" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
