<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sash.kremenchug.Activity_about_work"
    tools:showIn="@layout/activity_about_work">

    <LinearLayout
        android:layout_width="304dp"
        android:layout_height="437dp"
        android:orientation="vertical"

        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_2_1"
            android:gravity="center"
            android:textColor="@color/colorBLACK"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_2_2"
            android:gravity="start"
            android:textColor="@color/colorBLACK"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textStyle="italic"
            android:layout_marginLeft="5dp"
            />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_2_3"
            android:gravity="start"
            android:textColor="@color/colorBLACK"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textStyle="italic"
            android:layout_marginLeft="5dp"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_2_4"
            android:gravity="start"
            android:textColor="@color/colorBLACK"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textStyle="italic"
            android:layout_marginLeft="5dp"
            />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
