<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbg"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sash.kremenchug.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="304dp"
        android:layout_height="437dp"

        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/cool_down"
            android:textColor="@color/colorRED"

            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/charge_up"
            android:textColor="@color/colorBLACK"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Report_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/give"
                android:textAllCaps="false"
                android:textSize="@dimen/fab_margin1" />

            <Button
                android:id="@+id/Active_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Activ"
                android:textAllCaps="false"
                android:textSize="@dimen/fab_margin1" />

            <Button
                android:id="@+id/Done_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Done"
                android:textAllCaps="false"
                android:textSize="@dimen/fab_margin1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"

            >

            <fragment
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                map:cameraTilt="30"
                map:cameraZoom="16"
                map:mapType="normal"
                map:uiCompass="false"
                map:uiRotateGestures="true"
                map:uiScrollGestures="true"
                map:uiTiltGestures="true"
                map:uiZoomControls="true"
                map:uiZoomGestures="true"
                />


        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
