<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sash.kremenchug.Activity_massage"
    tools:showIn="@layout/activity_massage">

    <LinearLayout
        android:layout_width="304dp"
        android:layout_height="437dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:background="@color/colorbgt"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/Message_subject" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/busicText"
            android:layout_width="match_parent"
            android:layout_height="109dp"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorbgt"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/I_want_to_inform_you_that" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="10dp"

            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="203dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text=""
                app:srcCompat="@mipmap/ic_launcher" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/Choose_photo"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/Show_on_map"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:onClick="saveSave"
                android:text="@string/Send" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
